src/ui/snapshots/ppoker__ui__history__tests__History page after pressing down.snap
---
source: src/ui/history.rs
assertion_line: 265
expression: terminal.backend()
---
"╭Overview────────────────────────────────────────────────────────────────────────────────╮"
"│Name: Alice | Room: Planning Room | Server: wss://mocked | State: Playing | Round: 4 (0 │"
"╰────────────────────────────────────────────────────────────────────────────────────────╯"
"╭History───────────────────────────╮╭Your vote───────╮╭Vote distributio╮╭Average vote────╮"
"│  Round    Average     Duration   ││  ██     ████   ││                ││  ██     █████  │"
"│                                  ││ ███    ██  ██  ││                ││ ███    ██   ██ │"
"│  1        5.3         0 seconds  ││  ██        ██  ││                ││  ██    ██  ███ │"
"│> 2        10.5        0 seconds  ││  ██      ███   ││                ││  ██    ██ ████ │"
"│  3        4.0         0 seconds  ││  ██        ██  ││                ││  ██    ████ ██ │"
"│                                  ││  ██    ██  ██  ││                ││  ██    ███  ██ │"
"│                                  ││██████   ████   ││                ││██████   █████  │"
"│                                  │╰────────────────╯╰────────────────╯╰────────────────╯"
"│                                  │╭Players─────────────────────────────────────────────╮"
"│                                  ││Name       Vote                                     │"
"│                                  ││                                                    │"
"│                                  ││Charlie    8                                        │"
"│                                  ││Alice      13                                       │"
"│                                  ││Bob        ?                                        │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"╰──────────────────────────────────╯╰────────────────────────────────────────────────────╯"
"                                                                                          "
" Vote | ↑ | ↓ | Quit                                                                      "
"                                                                                          "
